methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: Invalid literal number
 for (i <0to6){
         ^MethodsReturning:1: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^MethodsReturning:1: error: expected class or object definition
def haveBaggle():Boolean = {
^MethodsReturning:4: error: Invalid literal number
 for (i <0to6){
         ^